--- a/index.html
+++ b/index.html
@@ -3,16 +3,161 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
   <body>
-    <div class="nav">
-      <div class="logo"><img src="./css/images/download.png" alt="logo" /></div>
-      <ul>
-        <li><a href="html/about.html">WHO ARE WE?</a></li>
-        <li><a href="html/menu.html">MENU</a></li>
-        <li><a href="index.html">HOME</a></li>
-      </ul>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h3 id="form-title">FILL FORM TO MAKE ORDER</h3>
+          <hr />
+          <form id="pizza-form">
+            <div class="form-group">
+              <label for="type">PICK PIZZA TYPE</label>
+              <select class="form-control" id="type" required>
+                <option value="">...</option>
+                <option value="vegetarian">VEGETARIAN</option>
+                <option value="chicken and mushroom">
+                  CHICKEN & MUSHROOM
+                </option>
+                <option value="hawaiian">HAWAIIAN</option>
+                <option value="bbq-steak">BBQ-STEAK</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="size">PICK SIZE</label>
+              <select class="form-control" id="size" required>
+                <option value="">...</option>
+                <option value="large">LARGE</option>
+                <option value="medium">MEDIUM</option>
+                <option value="small">SMALL</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="topping">PIZZA TOPPINGS</label>
+              <select class="form-control" id="topping" required>
+                <option value="">...</option>
+                <option value="sausage">SAUSAGE---Ksh.180</option>
+                <option value="cheese">CHEESE---Ksh.200</option>
+                <option value="mushroom">MUSHROOM--Ksh 100</option>
+                <option value="bacon">BACON--Ksh.110</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="crust">CRUST</label>
+              <select class="form-control" id="crust" required>
+                <option value="">...</option>
+                <option value="thick">THICK---Ksh.100</option>
+                <option value="thin">THIN---Ksh.0</option>
+              </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Add</button>
+          </form>
+          <br />
+        </div>
+        <div class="col-md-8 hidden" id="orders-div">
+          <h3>ORDER/ORDERS SUMMARY</h3>
+          <table class="table table-success table-responsive">
+            <thead>
+              <tr>
+                <th scope="col">TYPE</th>
+                <th scope="col">TOPPING/TOPPINGS</th>
+                <th scope="col">CRUST</th>
+                <th scope="col">SUM</th>
+              </tr>
+            </thead>
+            <tbody id="order-summary"></tbody>
+          </table>
+
+          <p class="delivery-cost hidden">
+            Delivery: Ksh. <span id="delivery-amount"></span>
+          </p>
+          <p class="total-amount hidden">
+            Total: Ksh. <span id="total-amount"></span>
+          </p>
+          <br /><br />
+          <button class="btn btn-primary hidden" id="checkout">Checkout</button>
+        </div>
+      </div>
     </div>
+
+    <div class="checkout-options hidden">
+      <h3>Checkout Form</h3>
+      <form id="checkout-form">
+        <div class="form-group">
+          <label>Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            placeholder="Enter Your Name"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlSelect1"
+            >ENTER PIZZA DELIVERY OPTION</label
+          >
+          <select class="form-control" id="delivery-option" required>
+            <option value="">...</option>
+            <option value="deliver">Delivery</option>
+            <option value="collect">Collection</option>
+          </select>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+
+    <div class="location hidden">
+      <form id="location-form">
+        <h3>Delivery Location</h3>
+        <div class="form-group">
+          <label>Enter Your Estate</label>
+          <input
+            type="text"
+            class="form-control"
+            id="estate"
+            placeholder="Estate Name"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlSelect1">Enter House Number</label>
+          <input
+            type="text"
+            class="form-control"
+            id="house-number"
+            placeholder="house number"
+            required
+          />
+        </div>
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
