Add changes to index.html file

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
               <label for="topping">PIZZA TOPPINGS</label>
               <select class="form-control" id="topping" required>
                 <option value="">...</option>
-                <option value="sausage">SAUSAGE---Ksh.180</option>
-                <option value="cheese">CHEESE---Ksh.200</option>
+                <option value="sausage">SAUSAGE--Ksh.180</option>
+                <option value="cheese">CHEESE--Ksh.200</option>
                 <option value="mushroom">MUSHROOM--Ksh 100</option>
                 <option value="bacon">BACON--Ksh.110</option>
               </select>
