--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Home Page</title>
   </head>
   <body>
     <div class="container">
