--- a/index.html
+++ b/index.html
@@ -18,146 +18,195 @@
     <title>Home Page</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <h3 id="form-title">FILL FORM TO MAKE ORDER</h3>
-          <hr />
-          <form id="pizza-form">
-            <div class="form-group">
-              <label for="type">PICK PIZZA TYPE</label>
-              <select class="form-control" id="type" required>
-                <option value="">...</option>
-                <option value="vegetarian">VEGETARIAN</option>
-                <option value="chicken and mushroom">
-                  CHICKEN & MUSHROOM
-                </option>
-                <option value="hawaiian">HAWAIIAN</option>
-                <option value="bbq-steak">BBQ-STEAK</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label for="size">PICK SIZE</label>
-              <select class="form-control" id="size" required>
-                <option value="">...</option>
-                <option value="large">LARGE</option>
-                <option value="medium">MEDIUM</option>
-                <option value="small">SMALL</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label for="topping">PIZZA TOPPINGS</label>
-              <select class="form-control" id="topping" required>
-                <option value="">...</option>
-                <option value="sausage">SAUSAGE--Ksh.180</option>
-                <option value="cheese">CHEESE--Ksh.200</option>
-                <option value="mushroom">MUSHROOM--Ksh 100</option>
-                <option value="bacon">BACON--Ksh.110</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label for="crust">CRUST</label>
-              <select class="form-control" id="crust" required>
-                <option value="">...</option>
-                <option value="thick">THICK---Ksh.100</option>
-                <option value="thin">THIN---Ksh.0</option>
-              </select>
-            </div>
-            <button type="submit" class="btn btn-primary">Add</button>
-          </form>
-          <br />
-        </div>
-        <div class="col-md-8 hidden" id="orders-div">
-          <h3>ORDER/ORDERS SUMMARY</h3>
-          <table class="table table-success table-responsive">
-            <thead>
-              <tr>
-                <th scope="col">TYPE</th>
-                <th scope="col">TOPPING/TOPPINGS</th>
-                <th scope="col">CRUST</th>
-                <th scope="col">SUM</th>
-              </tr>
-            </thead>
-            <tbody id="order-summary"></tbody>
-          </table>
+    <div class="jumbotron" margin-top: 25px;>
+    
 
-          <p class="delivery-cost hidden">
-            Delivery: Ksh. <span id="delivery-amount"></span>
-          </p>
-          <p class="total-amount hidden">
-            Total: Ksh. <span id="total-amount"></span>
-          </p>
-          <br /><br />
-          <button class="btn btn-primary hidden" id="checkout">Checkout</button>
+<!--Navbar-->
+<nav  class="navbar navbar-expand-lg ">
+
+  <!-- Collapse button -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+    aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <!-- Collapsible content -->
+  <div class="collapse navbar-collapse" id="basicExampleNav">
+
+    <!-- Links -->
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="">Home
+          <span class="sr-only">(current)</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/html/about.html">About Us</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/html/menu.html">Menu</a>
+      </li>
+
+      <!-- Dropdown -->
+    </ul>
+    <!-- Links -->
+
+    <form class="form-inline">
+      <div class="md-form my-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+      </div>
+    </form>
+  </div>
+  <!-- Collapsible content -->
+
+</nav>
+<!--/.Navbar-->
+
+
+
+      <div class="container-fluid" margin-top: 50px;>
+        <div class="row">
+          <div class="col-md-4">
+            <h3 id="form-title">FILL FORM TO MAKE ORDER</h3>
+            <hr />
+            <form id="pizza-form">
+              <div class="form-group">
+                <label for="type">PICK PIZZA TYPE</label>
+                <select class="form-control" id="type" required>
+                  <option value="">...</option>
+                  <option value="vegetarian">VEGETARIAN</option>
+                  <option value="chicken and mushroom">
+                    CHICKEN & MUSHROOM
+                  </option>
+                  <option value="hawaiian">HAWAIIAN</option>
+                  <option value="bbq-steak">BBQ-STEAK</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="size">PICK SIZE</label>
+                <select class="form-control" id="size" required>
+                  <option value="">...</option>
+                  <option value="large">LARGE</option>
+                  <option value="medium">MEDIUM</option>
+                  <option value="small">SMALL</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="topping">PIZZA TOPPINGS</label>
+                <select class="form-control" id="topping" required>
+                  <option value="">...</option>
+                  <option value="sausage">SAUSAGE--Ksh.180</option>
+                  <option value="cheese">CHEESE--Ksh.200</option>
+                  <option value="mushroom">MUSHROOM--Ksh 100</option>
+                  <option value="bacon">BACON--Ksh.110</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="crust">CRUST</label>
+                <select class="form-control" id="crust" required>
+                  <option value="">...</option>
+                  <option value="thick">THICK---Ksh.100</option>
+                  <option value="thin">THIN---Ksh.0</option>
+                </select>
+              </div>
+              <button type="submit" class="btn btn-primary">Add</button>
+            </form>
+            <br />
+          </div>
+          <div class="col-md-8 hidden" id="orders-div">
+            <h3>ORDER/ORDERS SUMMARY</h3>
+            <table class="table table-success table-responsive">
+              <thead>
+                <tr>
+                  <th scope="col">TYPE</th>
+                  <th scope="col">TOPPING/TOPPINGS</th>
+                  <th scope="col">CRUST</th>
+                  <th scope="col">SUM</th>
+                </tr>
+              </thead>
+              <tbody id="order-summary"></tbody>
+            </table>
+
+            <p class="delivery-cost hidden">
+              Delivery: Ksh. <span id="delivery-amount"></span>
+            </p>
+            <p class="total-amount hidden">
+              Total: Ksh. <span id="total-amount"></span>
+            </p>
+            <br /><br />
+            <button class="btn btn-primary hidden" id="checkout">
+              Checkout
+            </button>
+          </div>
         </div>
       </div>
+
+      <div class="checkout-options hidden">
+        <h3>Checkout Form</h3>
+        <form id="checkout-form">
+          <div class="form-group">
+            <label>Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="name"
+              placeholder="Enter Your Name"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1"
+              >ENTER PIZZA DELIVERY OPTION</label
+            >
+            <select class="form-control" id="delivery-option" required>
+              <option value="">...</option>
+              <option value="deliver">Delivery</option>
+              <option value="collect">Collection</option>
+            </select>
+          </div>
+
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+
+      <div class="location hidden">
+        <form id="location-form">
+          <h3>Delivery Location</h3>
+          <div class="form-group">
+            <label>Enter Your Estate</label>
+            <input
+              type="text"
+              class="form-control"
+              id="estate"
+              placeholder="Estate Name"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Enter House Number</label>
+            <input
+              type="text"
+              class="form-control"
+              id="house-number"
+              placeholder="house number"
+              required
+            />
+          </div>
+
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+      <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"
+      ></script>
+      <script src="./js/script.js"></script>
     </div>
-
-    <div class="checkout-options hidden">
-      <h3>Checkout Form</h3>
-      <form id="checkout-form">
-        <div class="form-group">
-          <label>Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="name"
-            placeholder="Enter Your Name"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlSelect1"
-            >ENTER PIZZA DELIVERY OPTION</label
-          >
-          <select class="form-control" id="delivery-option" required>
-            <option value="">...</option>
-            <option value="deliver">Delivery</option>
-            <option value="collect">Collection</option>
-          </select>
-        </div>
-
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
-
-    <div class="location hidden">
-      <form id="location-form">
-        <h3>Delivery Location</h3>
-        <div class="form-group">
-          <label>Enter Your Estate</label>
-          <input
-            type="text"
-            class="form-control"
-            id="estate"
-            placeholder="Estate Name"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlSelect1">Enter House Number</label>
-          <input
-            type="text"
-            class="form-control"
-            id="house-number"
-            placeholder="house number"
-            required
-          />
-        </div>
-
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./js/script.js"></script>
   </body>
 </html>
