--- a/html/menu.html
+++ b/html/menu.html
@@ -9,18 +9,20 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <title>About Us</title>
+        <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css/styles.css"/>
+        <title>About Us</title>
 </head>
 <body>
   
-    <div class="jumbotron" <div class="row">
+    <div class="jumbotron" <div class="row" >
         <h1>Get to Test From Our menu</h1>
         <div class="card-deck">
             <div class="card">
                 <img class="card-img-top"
                     src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2012/2/28/1/FNM_040112-Copy-That-002_s4x3.jpg.rend.hgtvcom.826.620.suffix/1382541346030.jpeg"
                     alt="Card image cap" />
-                <div class="card-body">
+                <div class="card-body" font-family: 'Kaushan Script', cursive; >
                     <h5 class="card-title">BBQ Chicken</h5>
                     <p class="card-text">
                         It turns out, the first ever BBQ chicken pizza creation belonged to California Pizza Kitchen's
