--- a/menu.html
+++ b/menu.html
@@ -11,12 +11,29 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/styles.css"/>
-        <title>About Us</title>
+        <title>Menu</title>
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-sm bg-dark">
+
+    
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">Order</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="menu.html">Menu</a>
+          </li>
+        </ul>
+      
+      </nav>
   
-    <div class="jumbotron" <div class="row" >
-        <h1>Get to Test From Our menu</h1>
+    <div class="jumbotron" style="background: transparent;"> <div class="row" >
+        <h1 class="cn">Get to Test From Our menu</h1>
         <div class="card-deck">
             <div class="card">
                 <img class="card-img-top"
